--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">HelloToast</string>
-    <string name="toast">Toast</string>
-    <string name="button_count">Count</string>
     <string name="show_count">0</string>
-    <string name="string_show_count">0</string>
+    <string name="button_label_toast">Toast</string>
+    <string name="button_label_count">Count</string>
+    <string name="toast_message">Hello Toast!</string>
 </resources>
